fixes - mypy and travis

--- a/tox.ini
+++ b/tox.ini
@@ -5,10 +5,12 @@ deps =
     # pytest
     pylint
     pycodestyle
+    mypy
     codespell
 commands =
     # pytest
-    pylint zcbe
+    pylint setup.py zcbe
     pycodestyle setup.py zcbe
+    mypy zcbe
     codespell -S *.pyc README.md setup.py templates test tox.ini zcbe
 
