Resolve PREFIXes to absolute, add tests

--- a/tox.ini
+++ b/tox.ini
@@ -2,13 +2,13 @@
 envlist = py37,py38
 [testenv]
 deps =
-    # pytest
+    pytest
     pylint
     pycodestyle
     mypy
     codespell
 commands =
-    # pytest
+    pytest
     pylint setup.py zcbe
     pycodestyle setup.py zcbe
     mypy zcbe
