See if codecov works

--- a/tox.ini
+++ b/tox.ini
@@ -1,16 +1,27 @@
 [tox]
 envlist = py37,py38
+
 [testenv]
+whitelist_externals =
+    bash
+    curl
+
+passenv =
+    CI
+    TRAVIS
+    TRAVIS_*
+
 deps =
     pytest
     pylint
     pycodestyle
     mypy
+    coverage
     codespell
+
 commands =
-    pytest
     pylint setup.py zcbe
     pycodestyle setup.py zcbe
     mypy zcbe
     codespell -S *.pyc README.md setup.py templates test tox.ini zcbe
-
+    coverage run --source zcbe --omit zcbe/__main__.py -m pytest
