--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,17 @@
 language: python
+
 matrix:
   include:
     - python: 3.7
       env: TOXENV=py37
     - python: 3.8
       env: TOXENV=py38
+
 install:
-  - pip install tox
+  - pip install tox codecov
+
 script:
   - tox
+
+after_success:
+  - codecov
