--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -5,7 +5,7 @@ name: Python package
 
 on:
   push:
-    branches: [ master ]
+    branches: [ master, 'dev-*', 'test-*' ]
   pull_request:
     branches: [ master ]
 
@@ -26,7 +26,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install flake8 pytest
+        pip install flake8 tox codecov
         pip install .
     - name: Lint with flake8
       run: |
@@ -34,6 +34,9 @@ jobs:
         flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
         # exit-zero treats all errors as warnings.
         flake8 . --count --exit-zero --max-complexity=10 --max-line-length=80 --statistics
-    - name: Test with pytest
+    - name: Test with tox
       run: |
-        pytest
+        tox -e "$(echo py${{ matrix.python-version }} | tr -d .)"
+    - name: Upload test coverage with codecov
+      run: |
+        codecov
