Fix typing errors and enforce strict typing

--- a/tox.ini
+++ b/tox.ini
@@ -12,6 +12,7 @@ passenv =
     TRAVIS_*
 
 deps =
+    types-toml
     pytest
     pylint
     pycodestyle
@@ -20,8 +21,8 @@ deps =
     codespell
 
 commands =
-    pylint --exit-zero setup.py zcbe
+    pylint setup.py zcbe
     pycodestyle setup.py zcbe
-    mypy zcbe
+    mypy --strict zcbe
     codespell -S *.pyc README.md setup.py templates test tox.ini zcbe
     coverage run --source zcbe --omit zcbe/__main__.py -m pytest
